--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,64 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="10dp"
         tools:context=".intro.IntroActivity">
 
    <androidx.viewpager.widget.ViewPager
            android:id="@+id/introPagerView"
            android:layout_width="match_parent"
-           android:layout_height="400dp"
-           app:layout_constraintLeft_toLeftOf="parent"
-           app:layout_constraintTop_toTopOf="parent"
-           app:layout_constraintRight_toRightOf="parent"
+           android:layout_height="match_parent"
+
    >
 
    </androidx.viewpager.widget.ViewPager>
 
-   <com.google.android.material.tabs.TabLayout
-           android:id="@+id/introTabLayout"
-           android:layout_width="match_parent"
-           android:layout_height="50dp"
-           app:layout_constraintTop_toBottomOf="@id/introPagerView"
-           app:layout_constraintLeft_toLeftOf="parent"
-           app:layout_constraintRight_toRightOf="parent"
-   >
+   <!--<com.google.android.material.tabs.TabLayout-->
+           <!--android:id="@+id/introTabLayout"-->
+           <!--android:layout_width="match_parent"-->
+           <!--android:layout_height="50dp"-->
+           <!--app:layout_constraintTop_toBottomOf="@id/introPagerView"-->
+           <!--app:layout_constraintLeft_toLeftOf="parent"-->
+           <!--app:layout_constraintRight_toRightOf="parent"-->
+   <!--&gt;-->
 
-   </com.google.android.material.tabs.TabLayout>
+   <!--</com.google.android.material.tabs.TabLayout>-->
 
-   <Button
-           android:id="@+id/introNextBtn"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="next"
-           app:layout_constraintTop_toBottomOf="@id/introTabLayout"
-           app:layout_constraintLeft_toLeftOf="parent"
-           app:layout_constraintRight_toRightOf="parent"
-   />
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_gravity="bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <Button
-            android:id="@+id/introGetStartedBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="getStarted"
-            app:layout_constraintTop_toBottomOf="@id/introNextBtn"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-    />
+        <Button
+                android:id="@+id/introNextBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="next"
+                android:layout_gravity="center_horizontal"
 
-    <TextView
-            android:id="@+id/skipIntroText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="skip"
-            app:layout_constraintTop_toBottomOf="@id/introNextBtn"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-    />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        />
+
+        <Button
+                android:id="@+id/introGetStartedBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="getStarted"
+                android:layout_gravity="center_horizontal"
+
+        />
+
+        <TextView
+                android:id="@+id/skipIntroText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="skip"
+                android:layout_gravity="center_horizontal"
+        />
+    </LinearLayout>
+
+
+</FrameLayout>
