--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -2,9 +2,8 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:padding="10dp"
         tools:context=".intro.IntroActivity">
 
@@ -17,16 +16,7 @@
 
    </androidx.viewpager.widget.ViewPager>
 
-   <!--<com.google.android.material.tabs.TabLayout-->
-           <!--android:id="@+id/introTabLayout"-->
-           <!--android:layout_width="match_parent"-->
-           <!--android:layout_height="50dp"-->
-           <!--app:layout_constraintTop_toBottomOf="@id/introPagerView"-->
-           <!--app:layout_constraintLeft_toLeftOf="parent"-->
-           <!--app:layout_constraintRight_toRightOf="parent"-->
-   <!--&gt;-->
 
-   <!--</com.google.android.material.tabs.TabLayout>-->
 
     <LinearLayout
             android:orientation="vertical"
@@ -34,13 +24,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+        <com.google.android.material.tabs.TabLayout
+                android:id="@+id/introTabLayout"
+                android:layout_width="100dp"
+                android:layout_gravity="center_horizontal"
+                app:tabIndicatorHeight="0dp"
+                android:layout_height="50dp"
+                app:tabBackground="@drawable/intro_tab_selector"
+                app:tabRippleColor="@null"
+        >
+
+        </com.google.android.material.tabs.TabLayout>
+
         <Button
                 android:id="@+id/introNextBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="next"
                 android:layout_gravity="center_horizontal"
-
+                android:text="@string/intro_next_btn"
 
         />
 
@@ -49,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:text="getStarted"
+                android:text="@string/intro_getStarted_btn"
                 android:layout_gravity="center_horizontal"
 
         />
@@ -59,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
-                android:text="skip"
+                android:text="@string/intro_skip_text"
                 android:layout_gravity="center_horizontal"
         />
     </LinearLayout>
