--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -38,20 +38,22 @@
 
         <Button
                 android:id="@+id/introNextBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:padding="0dp"
+                style="@style/IntroBtnStyle"
                 android:layout_gravity="center_horizontal"
                 android:text="@string/intro_next_btn"
+                android:background="@drawable/intro_buttons_background"
 
         />
 
         <Button
                 android:id="@+id/introGetStartedBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:padding="0dp"
+                style="@style/IntroBtnStyle"
                 android:visibility="gone"
                 android:text="@string/intro_getStarted_btn"
                 android:layout_gravity="center_horizontal"
+                android:background="@drawable/intro_buttons_background"
 
         />
 
