--- a/app/src/main/res/layout/intro_item_view.xml
+++ b/app/src/main/res/layout/intro_item_view.xml
@@ -6,13 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideLineSecond"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.4"
-    />
+
 
     <TextView
             android:id="@+id/introItemTittleView"
@@ -37,18 +31,32 @@
             app:layout_constraintBottom_toTopOf="@id/introItemImgView"
             android:text="@string/intro_first_short_desc"/>
 
-
+    <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideLineSecond"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.1"
+    />
 
     <ImageView
             android:id="@+id/introItemImgView"
             android:layout_width="match_parent"
-            android:layout_height="222dp"
+            android:layout_height="0dp"
             android:src="@drawable/facebook_icon"
-            app:layout_constraintTop_toTopOf="@id/guideLineSecond"
-            app:layout_constraintBottom_toBottomOf="@id/guideLineSecond"
+            app:layout_constraintTop_toTopOf="@+id/guideLineSecond"
+            app:layout_constraintBottom_toBottomOf="@id/guideLineThird"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="8dp"
+    />
+
+    <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideLineThird"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5"
     />
 
     <TextView
@@ -59,7 +67,7 @@
             app:layout_constraintTop_toBottomOf="@id/introItemImgView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:padding="10dp"
 
     />
