--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="10dp"
         tools:context=".MainActivity">
 
     <TextView
+            android:id="@+id/showPin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello World!"
