--- a/app/src/main/res/layout/check_protection_type_view.xml
+++ b/app/src/main/res/layout/check_protection_type_view.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:padding="40dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -28,12 +27,20 @@
                 app:layout_constraintGuide_percent=".2"
         />
 
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/topHorizontalGuideLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent=".2"
+        />
+
         <ImageView
                 android:id="@+id/withPinImg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/ic_launcher"
-                app:layout_constraintTop_toBottomOf="@id/checkingProtectiongTittle"
+                app:layout_constraintTop_toBottomOf="@id/topHorizontalGuideLine"
                 app:layout_constraintStart_toStartOf="@+id/verticalGuideLine"
                 android:layout_marginTop="10dp"
         />
@@ -61,13 +68,14 @@
         />
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 style="@style/IntroBaseTextStyle"
                 android:text="@string/master_pin_use_text"
                 app:layout_constraintTop_toBottomOf="@id/masterPinTextTittle"
-
                 app:layout_constraintStart_toEndOf="@id/withProtectionCheck"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
         />
 
         <androidx.constraintlayout.widget.Guideline
@@ -111,13 +119,14 @@
 
         <TextView
                 android:id="@+id/withoutPinDesc"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 style="@style/IntroBaseTextStyle"
                 android:text="@string/no_protection_text"
                 app:layout_constraintTop_toBottomOf="@id/masterWithoutPinTextTittle"
-
                 app:layout_constraintStart_toEndOf="@id/withouthProtectionCheck"
+               app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
         />
 
         <Button
